# Cerca

./: .gitignore  README.md  pubspec.yaml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
backend/migrations/: 0001_create_users.sql  0002_cerca_features.sql  0003_job_extra_fields.sql  0004_fix_serial_sequences.sql  0005_job_pricing.sql  0006_job_agreed_price.sql  0007_peru_currency_seed_data.sql
backend/src/: config.rs  db.rs  lib.rs  main.rs  routes.rs  state.rs
backend/src/features/: mod.rs
backend/src/features/auth/: mod.rs
backend/src/features/auth/application/: get_current_user.rs  login_user.rs  mod.rs  ports.rs  register_user.rs
backend/src/features/auth/domain/: errors.rs  mod.rs  repository.rs  user.rs  value_objects.rs
backend/src/features/auth/infrastructure/: argon2_password_hasher.rs  jwt_token_service.rs  mod.rs  postgres_user_repository.rs
backend/src/features/chat/application/: mod.rs  send_message.rs
backend/src/features/chat/domain/: errors.rs  message.rs  mod.rs  repository.rs
backend/src/features/chat/infrastructure/: mod.rs  postgres_chat_repository.rs
backend/src/features/client/application/: add_address.rs  add_payment_method.rs  mod.rs  save_profile.rs
backend/src/features/client/domain/: client_address.rs  client_payment_method.rs  errors.rs  mod.rs  repository.rs
backend/src/features/client/infrastructure/: mod.rs  postgres_client_repository.rs
backend/src/features/job/domain/: errors.rs  (+4 more)
backend/src/shared/: error.rs
backend/tests/: job_lifecycle.rs
(+225 files in other folders)
